After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 478344 - GtkTreeRowReference falsely said to auto-subscribe to Model signals
GtkTreeRowReference falsely said to auto-subscribe to Model signals
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Documentation
2.12.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2007-09-19 12:45 UTC by Josselin Mouette
Modified: 2012-05-04 02:06 UTC
See Also:
GNOME target: ---
GNOME version: 2.17/2.18


Attachments
replace signal connection text with generic text (1.18 KB, patch)
2012-02-20 14:47 UTC, David King
committed Details | Review

Description Josselin Mouette 2007-09-19 12:45:43 UTC
[ Forwarded from http://bugs.debian.org/440266 from Ian Zimmerman ]

>From /usr/share/doc/libgtk2.0-doc/gtk/GtkTreeModel.html:

>>
gtk_tree_row_reference_new ()

Creates a row reference based on path. 
This reference will keep pointing to the node pointed to by path, so
long as it exists. It listens to all signals emitted by model, and
updates its path appropriately.
<<

This is simply not true.  A look at the source confirms that
gtk_tree_row_reference_new is just a trivial wrapper around
gtk_tree_row_reference_new_proxy, and does not do any additional
signal subscription.
Comment 1 Kristian Rietveld 2007-09-24 15:29:50 UTC
The documentation is outdated on this point.  The two functions in question actually did connect to the model callbacks until somewhere in 2003.  From there on custom marshallers have been used for first updating the row references and after that calling all other connected callbacks.  See #107748 for a discussion on the subject.
Comment 2 David King 2012-02-20 14:47:45 UTC
Created attachment 208040 [details] [review]
replace signal connection text with generic text
Comment 3 Matthias Clasen 2012-05-04 01:08:38 UTC
Review of attachment 208040 [details] [review]:

sure, thanks
Comment 4 David King 2012-05-04 02:05:58 UTC
Comment on attachment 208040 [details] [review]
replace signal connection text with generic text

Pushed to master.