gtk/gtktreemodel.c
@@ -2208,8 +2208,8 @@ gtk_tree_row_reference_unref_path (GtkTreePath  *path,
  * Creates a row reference based on @path.
  *
  * This reference will keep pointing to the node pointed to
- * by @path, so long as it exists. It listens to all signals
- * emitted by @model, and updates its path appropriately. If
+ * by @path, so long as it exists. Any changes that occur on @model are
+ * propagated, and the path is updated appropriately. If
  * @path isn't a valid path in @model, then %NULL is returned.
  *
  * Return value: a newly allocated #GtkTreeRowReference, or %NULL
